# phonetisaurus-g2p-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: wheels.yml
python/: example.py
python/phonetisaurus_g2p_py/: __init__.py
src/: lib.rs  main.rs  phonetisaurus.rs
