[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "phonetisaurus-g2p-py"
description = "A Python wrapper for Phonetisaurus FST-based grapheme-to-phoneme conversion"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["phonetics", "g2p", "grapheme-to-phoneme", "phonemization", "fst"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/yourusername/phonetisaurus-g2p-py"
repository = "https://github.com/yourusername/phonetisaurus-g2p-py"

[tool.maturin]
python-source = "python"
module-name = "phonetisaurus_g2p_py.phonetisaurus_g2p_py"
