[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "phonetisaurus-g2p-py"
description = "A Python wrapper for Phonetisaurus FST-based grapheme-to-phoneme conversion"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["phonetics", "g2p", "grapheme-to-phoneme", "phonemization", "fst"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/yourusername/phonetisaurus-g2p-py"
repository = "https://github.com/yourusername/phonetisaurus-g2p-py"

[tool.maturin]
python-source = "python"
module-name = "phonetisaurus_g2p_py.phonetisaurus_g2p_py"

# Configuration for cibuildwheel
# See: https://cibuildwheel.readthedocs.io/en/stable/options/
[tool.cibuildwheel]
# Build wheels for Python 3.9-3.12
build = "cp39-* cp310-* cp311-* cp312-*"

# Skip 32-bit builds and musl builds
skip = [
    "*-win32",
    "*-manylinux_i686", 
    "*-musllinux_*",
    "pp*"  # Skip PyPy for now
]

# Test the built wheels
test-requires = "pytest"
test-command = "python -c 'import phonetisaurus_g2p_py; print(\"Import successful\")'"

# Build only for these architectures
[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-build = [
    "pip install --upgrade pip setuptools wheel",
    "pip install maturin"
]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-build = [
    "pip install --upgrade pip setuptools wheel",
    "pip install maturin"
]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-build = [
    "pip install --upgrade pip setuptools wheel",
    "pip install maturin"
]
